fixing the issue for horizontal scrolling on the account page on mobile

--- a/src/styles/app/_profile.scss
+++ b/src/styles/app/_profile.scss
@@ -1,5 +1,8 @@
 #users, .profile {
 
+  .form-group.row {
+    margin-right: 0;
+  }
   .profile-header {
     margin-top : 50px;
 
